--- a/src/main/resources/templates/html/header.html
+++ b/src/main/resources/templates/html/header.html
@@ -11,34 +11,46 @@
 	<script th:src="@{/jquery/jquery-3.6.0.min.js}"></script>
 	<script th:src="@{/jquery/jquery.twbsPagination.min.js}"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js"></script>
-
+	<script th:inline="javascript">
+		function changeLanguage(lang) {
+			var currentUrl = window.location.href;
+			var regex = /[?&]lang=/i;
+			if (regex.test(currentUrl)) {
+				var newUrl = currentUrl.replace(/([?&]lang=)[^\&]+/, '$1' + lang);
+				window.location.href = newUrl;
+			} else {
+				var separator = currentUrl.indexOf('?') !== -1 ? '&' : '?';
+				var newUrl = currentUrl + separator + 'lang=' + lang;
+				window.location.href = newUrl;
+			}
+		}
+	</script>
 </head>
 
-<body sb-nav-fixed>
-	<nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-		<a class="navbar-brand ps-3 fw-bold" th:href="@{/}">
-			<i class="fa-solid fa-bolt me-3"></i>Manage System
-		</a>
-		<button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" th:href="@{#}">
-			<i class="fas fa-bars"></i>
-		</button>
-		/*[[ - ]]*/
-		<form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
-			<a th:href="@{'?lang=vi'}">VI</a>
-			<a th:href="@{'?lang=en'}">EN</a>
-		</form>
-		<ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
-			<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" id="navbarDropdown" th:href="@{#}" role="button"
-					data-bs-toggle="dropdown" aria-expanded="false"> <i class="fas fa-user fa-fw"></i>
-				</a>
-				<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-					<li><a class="dropdown-item fw-bold" th:href="@{/member/edit}">
-							<i class="fas fa-user fa-fw"></i>User profile
-						</a></li>
-					<li><a class="dropdown-item fw-bold" th:href="@{/logout}">
-							<i class="fa fa-sign-out" aria-hidden="true"></i> Logout
-						</a></li>
-				</ul>
-			</li>
-		</ul>
-	</nav>
+<nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+	<a class="navbar-brand ps-3 fw-bold" th:href="@{/}">
+		<i class="fa-solid fa-bolt me-3"></i>
+		<span th:text="#{title}"></span>
+	</a>
+	<button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" th:href="@{#}">
+		<i class="fas fa-bars"></i>
+	</button>
+	<form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
+		<button type="button" onclick="changeLanguage('vi')">VI</button>
+		<button type="button" onclick="changeLanguage('en')">EN</button>
+	</form>
+	<ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
+		<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" id="navbarDropdown" th:href="@{#}" role="button"
+				data-bs-toggle="dropdown" aria-expanded="false"> <i class="fas fa-user fa-fw"></i>
+			</a>
+			<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+				<li><a class="dropdown-item fw-bold" th:href="@{/member/edit}">
+						<i class="fas fa-user fa-fw"></i>User profile
+					</a></li>
+				<li><a class="dropdown-item fw-bold" th:href="@{/logout}">
+						<i class="fa fa-sign-out" aria-hidden="true"></i> Logout
+					</a></li>
+			</ul>
+		</li>
+	</ul>
+</nav>
