--- a/src/main/resources/templates/html/add/dichvu.html
+++ b/src/main/resources/templates/html/add/dichvu.html
@@ -4,9 +4,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta charset="UTF-8">
-	<title>Spring Form with Thymeleaf</title>
+	<title th:text="#{title.createdichvu}"></title>
 	<div th:replace="~{html/header}"></div>
-
 </head>
 
 <body>
@@ -18,7 +17,6 @@
 		<th:block th:if="${urlpattern.contains('/add/')}">
 			<th:block th:with="action='dichvu', disable=false" />
 		</th:block>
-
 	</th:block>
 	<div id="layoutSidenav">
 		<div th:replace="~{html/sidebar}"></div>
@@ -27,44 +25,43 @@
 				<div class="row border m-1 pb-2 rounded-top">
 					<div class="bg-secondary p-2 text-light rounded-top">
 						<h1 class="border-bottom">
-							<span th:if="${#strings.isEmpty(model.maDV)}">Thêm mới Dịch Vụ</span>
+							<span th:if="${#strings.isEmpty(model.maDV)}" th:text="#{title.createdichvu}"></span>
 							<span th:if="${not #strings.isEmpty(model.maDV)}">Cập nhật Dịch Vụ</span>
 						</h1>
 					</div>
 					<div class="col-8">
 						<form th:action="${action}" th:object="${model}" method="post" id="register-form">
 							<div class="form-group mb-3">
-								<label for="maDV" class="form-label fw-bold">Mã dịch vụ</label>
-								<input type="text" class="form-control" th:field="*{maDV}" placeholder="Nhập mã dịch vụ" id="maDV"
-									th:disabled="${disable}" />
+								<label for="maDV" class="form-label fw-bold" th:text="#{form.maDV}"></label>
+								<input type="text" class="form-control" th:field="*{maDV}" th:placeholder="#{form.placeholder.maDV}"
+									id="maDV" th:disabled="${disable}" />
 								<div th:errors="*{maDV}" class="error-entity"></div>
 								<div class="error"></div>
 							</div>
 							<div class="form-group mb-3">
-								<label for="tenDV" class="form-label fw-bold">Tên dịch
-									vụ</label> <input type="text" class="form-control" th:field="*{tenDV}" placeholder="Nhập tên dịch vụ"
+								<label for="tenDV" class="form-label fw-bold" th:text="#{form.tenDV}"></label>
+								<input type="text" class="form-control" th:field="*{tenDV}" th:placeholder="#{form.placeholder.tenDV}"
 									id="tenDV" />
 								<div th:errors="*{tenDV}" class="error-entity"></div>
 								<div class="error"></div>
 							</div>
 							<div class="form-group mb-3">
-								<label for="donViTinh" class="form-label fw-bold">Đơn vị
-									tính</label> <input type="text" class="form-control" th:field="*{donViTinh}"
-									placeholder="Nhập đơn vị tính" id="donViTinh" />
+								<label for="donViTinh" class="form-label fw-bold" th:text="#{form.unit}"></label> <input type="text"
+									class="form-control" th:field="*{donViTinh}" th:placeholder="#{form.placeholder.unit}"
+									id="donViTinh" />
 								<div th:errors="*{donViTinh}" class="error-entity"></div>
 								<div class="error"></div>
 							</div>
 							<div class="form-group mb-3">
-								<label for="donGia" class="form-label fw-bold">Đơn giá</label> <input type="text" class="form-control"
-									th:field="*{donGia}" placeholder="Nhập đơn giá" id="donGia" />
+								<label for="donGia" class="form-label fw-bold" th:text="#{form.price}"></label> <input type="text"
+									class="form-control" th:field="*{donGia}" th:placeholder="#{form.placeholder.price}" id="donGia" />
 								<div th:errors="*{donGia}" class="error-entity"></div>
 								<div class="error"></div>
 							</div>
 							<input type="hidden" name="page" th:value="${page}" />
 							<div>
-								<button id="btn-add" type="button" class="btn btn-outline-secondary">Submit button</button>
-								<button type="reset" class="btn btn-outline-secondary">Reset
-									button</button>
+								<button id="btn-add" type="button" class="btn btn-outline-secondary" th:text="#{btn.submit}"></button>
+								<button type="reset" class="btn btn-outline-secondary" th:text="#{btn.reset}"></button>
 							</div>
 						</form>
 					</div>
@@ -84,10 +81,16 @@
 			</footer>
 		</div>
 	</div>
+	<script th:inline="javascript">
+		let error = [
+			{ index: 1, message: /*[[#{error.required}]]*/'', regex: /^DV\d{3}$/ },
+			{ index: 2, message: /*[[#{error.alpha}]]*/'', regex: /^[a-zA-Z]/ },
+			{ index: 3, message: /*[[#{error.alpha}]]*/'', regex: /^[a-zA-Z]/ },
+			{ index: 4, message: /*[[#{error.numeric}]]*/'', regex: /^[0-9]/ },
+		];
+	</script>
 
-	<script th:src="@{/js/error/dichvu.js}" type="text/javascript"></script>
 	<script th:src="@{/js/add/errorHandle.js}" type="text/javascript">
-		document.title = "Tạo mới dịch vụ"
 	</script>
 	<script th:src="|https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js|"></script>
 	<script th:src="@{/js/script.js}"></script>
