--- a/src/main/resources/templates/html/add/khachhang.html
+++ b/src/main/resources/templates/html/add/khachhang.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
+
 <head>
-<title
-	th:text="${'Tạo mới khách hàng' + (not #strings.isEmpty(model.maKH) ? ' - Cập nhật khách hàng' : '')}"></title>
-<div th:replace="~{html/header}"></div>
+	<title
+		th:text="${#messages.msg('title.createkhachhang') + (not #strings.isEmpty(model.maKH) ? ' - Cập nhật khách hàng' : '')}">
+	</title>
+
+	<div th:replace="~{html/header}"></div>
 </head>
+
 <body>
 	<div id="layoutSidenav">
 		<div th:replace="~{html/sidebar}"></div>
@@ -13,66 +17,52 @@
 				<div class="row border m-1 pb-2 rounded-top">
 					<div class="bg-secondary p-2 text-light rounded-top">
 						<h1 class="border-bottom">
-							<span th:if="${#strings.isEmpty(model.maKH)}">Thêm mới
-								khách hàng</span> <span th:if="${not #strings.isEmpty(model.maKH)}">Cập
+							<span th:if="${#strings.isEmpty(model.maKH)}" th:text="#{title.createkhachhang}"></span>
+							<span th:if="${not #strings.isEmpty(model.maKH)}">Cập
 								nhật khách hàng</span>
 						</h1>
 					</div>
 					<div class="col-8">
-						<form th:object="${model}" method="POST" th:action="${action}"
-							id="register-form">
+						<form th:object="${model}" method="POST" th:action="${action}" id="register-form">
 							<div class="form-group mb-3">
-								<label for="serial" class="form-label fw-bold">Mã khách
-									hàng</label> <input type="text" class="form-control" th:field="*{maKH}"
-									placeholder="Nhập mã khách hàng" id="serial"
+								<label for="serial" class="form-label fw-bold" th:text="#{form.maKH}"></label> <input type="text"
+									class="form-control" th:field="*{maKH}" th:placeholder="#{form.placeholder.maKH}" id="serial"
 									th:disabled="${disable}" />
-								<div th:if="${#fields.hasErrors('maKH')}" class="error-entity"
-									th:errors="*{maKH}"></div>
+								<div th:if="${#fields.hasErrors('maKH')}" class="error-entity" th:errors="*{maKH}"></div>
 								<div class="error"></div>
 							</div>
 							<div class="form-group mb-3">
-								<label for="tenKh" class="form-label fw-bold">Tên khách
-									hàng</label> <input type="text" class="form-control"
-									th:field="*{tenKH}" placeholder="Nhập tên khách hàng"
-									id="tenKh" />
-								<div th:if="${#fields.hasErrors('tenKH')}" class="error-entity"
-									th:errors="*{tenKH}"></div>
+								<label for="tenKh" class="form-label fw-bold" th:text="#{form.tenKH}"></label> <input type="text"
+									class="form-control" th:field="*{tenKH}" th:placeholder="#{form.placeholder.tenKH}" id="tenKh" />
+								<div th:if="${#fields.hasErrors('tenKH')}" class="error-entity" th:errors="*{tenKH}"></div>
 								<div class="error"></div>
 							</div>
 
 							<div class="form-group mb-3">
-								<label for="email" class="form-label fw-bold">Email</label> <input
-									type="text" class="form-control" th:field="*{email}"
-									placeholder="your_email@example.com" />
-								<div th:if="${#fields.hasErrors('email')}" class="error-entity"
-									th:errors="*{email}"></div>
+								<label for="email" class="form-label fw-bold" th:text="#{form.email}"></label> <input type="text"
+									class="form-control" th:field="*{email}" th:placeholder="#{form.placeholder.email}" />
+								<div th:if="${#fields.hasErrors('email')}" class="error-entity" th:errors="*{email}"></div>
 								<div class="error"></div>
 							</div>
 
 							<div class="form-group mb-3">
-								<label for="phone" class="form-label fw-bold">Số điện
-									thoại</label> <input type="text" class="form-control"
-									th:field="*{soDienThoai}" placeholder="Enter your phone number" />
-								<div th:if="${#fields.hasErrors('soDienThoai')}"
-									class="error-entity" th:errors="*{soDienThoai}"></div>
+								<label for="phone" class="form-label fw-bold" th:text="#{form.phone}"></label> <input type="text"
+									class="form-control" th:field="*{soDienThoai}" th:placeholder="#{form.placeholder.phone}" />
+								<div th:if="${#fields.hasErrors('soDienThoai')}" class="error-entity" th:errors="*{soDienThoai}"></div>
 								<div class="error"></div>
 							</div>
 
 							<div class="form-group mb-3">
-								<label for="diaChi" class="form-label fw-bold">Địa chỉ</label> <input
-									type="text" class="form-control" th:field="*{diaChi}"
-									placeholder="Nhập địa chỉ" id="diaChi" />
-								<div th:if="${#fields.hasErrors('diaChi')}" class="error-entity"
-									th:errors="*{diaChi}"></div>
+								<label for="diaChi" class="form-label fw-bold" th:text="#{form.address}"></label> <input type="text"
+									class="form-control" th:field="*{diaChi}" th:placeholder="#{form.placeholder.address}" id="diaChi" />
+								<div th:if="${#fields.hasErrors('diaChi')}" class="error-entity" th:errors="*{diaChi}"></div>
 								<div class="error"></div>
 							</div>
 
 							<input type="hidden" name="page" th:value="${page}" />
 							<div>
-								<button id="btn-add" type="button"
-									class="btn btn-outline-secondary">Submit button</button>
-								<button type="reset" class="btn btn-outline-secondary">Reset
-									button</button>
+								<button id="btn-add" type="button" class="btn btn-outline-secondary" th:text="#{btn.submit}"></button>
+								<button type="reset" class="btn btn-outline-secondary" th:text="#{btn.reset}"></button>
 							</div>
 						</form>
 					</div>
@@ -81,8 +71,7 @@
 			</main>
 			<footer class="py-4 bg-light mt-auto">
 				<div class="container-fluid px-4">
-					<div
-						class="d-flex align-items-center justify-content-between small">
+					<div class="d-flex align-items-center justify-content-between small">
 						<div class="text-muted">Copyright &copy; Ducreal 2023</div>
 						<div>
 							<a href="#">Privacy Policy</a> &middot; <a href="#">Terms
@@ -93,11 +82,21 @@
 			</footer>
 		</div>
 	</div>
-	<script th:src="@{/js/error/khachhang.js}" type="text/javascript"></script>
+	<script th:inline="javascript">
+		let error = [
+			{ index: 1, message: /*[[#{error.required}]]*/'', regex: /^KH\d{3}$/ },
+			{ index: 2, message: /*[[#{error.required}]]*/'', regex: /^[a-zA-Z]/ },
+			{ index: 3, message: /*[[#{error.required}]]*/'', regex: /^[\w.-]+@([\w-]+\.)+[\w-]{2,4}$/ },
+			{ index: 4, message: /*[[#{error.required}]]*/'', regex: /^\d{10}/ },
+			{ index: 5, message: /*[[#{error.required}]]*/'', regex: /^[a-zA-Z]/ },
+		];
+	</script>
+	
 	<script th:src="@{/js/add/errorHandle.js}" type="text/javascript">
 		document.title = "Tạo mới khách hàng"
 	</script>
 	<script th:src="|https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js|"></script>
 	<script th:src="@{/js/script.js}"></script>
 </body>
+
 </html>
