--- a/src/main/resources/templates/html/add/may.html
+++ b/src/main/resources/templates/html/add/may.html
@@ -3,7 +3,7 @@
 	xmlns:form="http://www.thymeleaf.org">
 
 <head>
-<title>Tạo mới máy</title>
+<title th:text="#{title.createmay}"></title>
 </head>
 	<div th:replace="html/header"></div>
 <body>
@@ -13,29 +13,28 @@
 			<main class="p-4">
 				<div class="row border m-1 pb-2 rounded-top">
 					<div class="bg-secondary p-2 text-light rounded-top">
-						<h1 class="border-bottom" th:text="#{createmay}"></h1>
+						<h1 class="border-bottom" th:text="#{title.createmay}"></h1>
 					</div>
 					<div class="col-8">
 						<form th:action="@{/add/may}" th:object="${model}" method="post"
 							id="register-form">
 							<div class="form-group mb-3">
-								<label for="maMay" class="form-label fw-bold">Mã máy</label> <input
+								<label for="maMay" class="form-label fw-bold" th:text="#{form.maMay}"></label> <input
 									type="text" class="form-control" th:field="*{{maMay}}"
-									placeholder="Nhập mã máy" id="maMay" th:disabled="${disable}" />
+									th:placeholder="#{form.placeholder.maMay}" id="maMay" th:disabled="${disable}" />
 								<div th:errors="*{maMay}" class="error-entity"></div>
 								<div class="error"></div>
 							</div>
 							<div class="form-group mb-3">
-								<label for="viTri" class="form-label fw-bold">Vị trí</label> <input
+								<label for="viTri" class="form-label fw-bold" th:text="#{form.position}"></label> <input
 									type="text" class="form-control" th:field="*{viTri}"
-									placeholder="Nhập vị trí" id="viTri" value="" />
+									th:placeholder="#{form.placeholder.position}" id="viTri" value="" />
 								<div th:errors="*{viTri}" class="error-entity"></div>
 								<div class="error"></div>
 							</div>
 							<div class="form-group mb-3">
-								<label for="trangThai" class="form-label fw-bold">Trạng
-									thái</label> <input type="text" class="form-control"
-									th:field="*{trangThai}" placeholder="Nhập trạng thái máy"
+								<label for="trangThai" class="form-label fw-bold" th:text="#{form.status}"></label> <input type="text" class="form-control"
+									th:field="*{trangThai}" th:placeholder="#{form.placeholder.position}"
 									id="trangThai" value="" />
 								<div th:errors="*{trangThai}" class="error-entity"></div>
 								<div class="error"></div>
@@ -43,9 +42,9 @@
 							<input type="hidden" name="page" th:value="${page}" />
 							<div>
 								<button id="btn-add" type="submit"
-									class="btn btn-outline-secondary">Submit button</button>
+									class="btn btn-outline-secondary" th:text="#{btn.submit}"></button>
 								<button id="btn-reset" type="reset"
-									class="btn btn-outline-secondary">Reset button</button>
+									class="btn btn-outline-secondary" th:text="#{btn.reset}"></button>
 							</div>
 						</form>
 					</div>
@@ -67,7 +66,13 @@
 		</div>
 	</div>
 
-	<script th:src="@{/js/error/may.js}" type="text/javascript"></script>
+	<script th:inline="javascript">
+		let error = [
+	{ index: 1, message: /*[[#{error.required}]]*/'', regex: /^M\d{3}$/ },
+	{ index: 2, message: /*[[#{error.required}]]*/'', regex: /^[a-zA-Z]/ },
+	{ index: 3, message: /*[[#{error.required}]]*/'', regex: /^[a-zA-Z]/ },
+];
+	</script>
 	<script th:src="@{/js/add/errorHandle.js}"
 		type="text/javascript">
 		document.title = "Tạo mới máy"
