--- a/src/main/resources/templates/html/add/sudungdichvu.html
+++ b/src/main/resources/templates/html/add/sudungdichvu.html
@@ -1,56 +1,64 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Đăng kí sử dụng dịch vụ</title>
-	<div th:replace="~{html/header}"></div>
 
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title th:text="#{title.createSuDungDichVu}"></title>
+    <div th:replace="~{html/header}"></div>
 </head>
+
 <body>
     <div id="layoutSidenav">
-      <div th:replace="~{html/sidebar}"></div>
+        <div th:replace="~{html/sidebar}"></div>
         <div id="layoutSidenav_content">
             <main class="p-4">
                 <div class="row border m-1 pb-2 rounded-top">
                     <div class="bg-secondary p-2 text-light rounded-top">
-                        <h1 class="border-bottom">Đăng kí sử dụng dịch vụ</h1>
+                        <h1 class="border-bottom" th:text="#{title.createSuDungDichVu}"></h1>
                     </div>
                     <div class="col-8">
                         <form th:action="@{/add/sudungdichvu}" th:object="${model}" method="post" id="register-form">
                             <div class="form-group mb-3">
-                                <label for="serial" class="form-label fw-bold">Mã khách hàng</label>
-                                <input type="text" class="form-control" th:field="*{id.ma_khach_hang}" placeholder="Nhập mã khách hàng" id="serial"/>
+                                <label for="serial" class="form-label fw-bold" th:text="#{form.maKH}"></label>
+                                <input type="text" class="form-control" th:field="*{id.ma_khach_hang}"
+                                    th:placeholder="#{form.placeholder.maKH}" id="serial" />
                                 <div th:errors="*{id.ma_khach_hang}" class="error-entity"></div>
                                 <div class="error"></div>
                             </div>
                             <div class="form-group mb-3">
-                                <label for="tenKh" class="form-label fw-bold">Mã dịch vụ</label>
-                                <input type="text" class="form-control" th:field="*{id.ma_dich_vu}" placeholder="Nhập mã dịch vụ" id="tenKh"/>
+                                <label for="tenKh" class="form-label fw-bold" th:text="#{form.maDV}"></label>
+                                <input type="text" class="form-control" th:field="*{id.ma_dich_vu}"
+                                    th:placeholder="#{form.maDV}" id="tenKh" />
                                 <div th:errors="*{id.ma_dich_vu}" class="error-entity"></div>
                                 <div class="error"></div>
                             </div>
                             <div class="form-group mb-3">
-                                <label for="email" class="form-label fw-bold">Ngày sử dụng</label>
-                                <input type="date" class="form-control" th:field="*{id.ngaySuDung}" placeholder="Nhập ngày sử dụng"/>
+                                <label for="email" class="form-label fw-bold" th:text="#{form.dateUse}"></label>
+                                <input type="date" class="form-control" th:field="*{id.ngaySuDung}"
+                                    th:placeholder="#{form.placeholder.dateUse}" />
                                 <div th:errors="*{id.ngaySuDung}" class="error-entity"></div>
                                 <div class="error"></div>
                             </div>
                             <div class="form-group mb-3">
-                                <label for="phone" class="form-label fw-bold">Giờ sử dụng</label>
-                                <input type="time" class="form-control" th:field="*{id.gioSuDung}" placeholder="Nhập giờ sử dụng"/>
+                                <label for="phone" class="form-label fw-bold" th:text="#{form.timeUse}"></label>
+                                <input type="time" class="form-control" th:field="*{id.gioSuDung}"
+                                    th:placeholder="#{form.placeholder.timeUse}" />
                                 <div th:errors="*{id.gioSuDung}" class="error-entity"></div>
                                 <div class="error"></div>
                             </div>
                             <div class="form-group mb-3">
-                                <label for="diaChi" class="form-label fw-bold">Số lượng</label>
-                                <input type="text" class="form-control" th:field="*{soLuong}" placeholder="Nhập số lượng" id="diaChi"/>
+                                <label for="diaChi" class="form-label fw-bold" th:text="#{form.quantity}"></label>
+                                <input type="text" class="form-control" th:field="*{soLuong}"
+                                    th:placeholder="#{form.placeholder.quantity}" id="diaChi" />
                                 <div th:errors="*{soLuong}" class="error-entity"></div>
                                 <div class="error"></div>
                             </div>
                             <div>
-                                <button id="btn-add" type="button" class="btn btn-outline-secondary">Submit button</button>
-                                <button type="reset" id="btn-reset" class="btn btn-outline-secondary">Reset button</button>
+                                <button id="btn-add" type="button" class="btn btn-outline-secondary"
+                                    th:text="#{btn.submit}"></button>
+                                <button type="reset" id="btn-reset" class="btn btn-outline-secondary"
+                                    th:text="#{btn.reset}"></button>
                             </div>
                         </form>
                     </div>
@@ -58,23 +66,29 @@
                 </div>
             </main>
             <footer class="py-4 bg-light mt-auto">
-              <div class="container-fluid px-4">
-                <div
-                  class="d-flex align-items-center justify-content-between small">
-                  <div class="text-muted">Copyright &copy; Ducreal 2023</div>
-                  <div>
-                    <a href="#">Privacy Policy</a> &middot; <a href="#">Terms
-                      &amp; Conditions</a>
-                  </div>
+                <div class="container-fluid px-4">
+                    <div class="d-flex align-items-center justify-content-between small">
+                        <div class="text-muted">Copyright &copy; Ducreal 2023</div>
+                        <div>
+                            <a href="#">Privacy Policy</a> &middot; <a href="#">Terms
+                                &amp; Conditions</a>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </footer>
         </div>
     </div>
-    <script src="/js/error/sudungdichvu.js" type="text/javascript"></script>
+    <script th:inline="javascript">
+        let error = [
+            { index: 1, message: /*[[#{error.required}]]*/'', regex: /^KH\d{3}$/ },
+            { index: 2, message: /*[[#{error.required}]]*/'', regex: /^DV\d{3}$/ },
+            { index: 3, message: /*[[#{error.required}]]*/'', regex: /^\d{4}-(0[1-9]|1[0-2])-(0[1-9]|[12][0-9]|3[01])$/ },
+            { index: 4, message: /*[[#{error.required}]]*/'', regex: /^\d/ },
+            { index: 5, message: /*[[#{error.required}]]*/'', regex: /^\d/ },
+        ];
+    </script>
     <script src="/js/add/errorHandle.js"></script>
     <script type="text/javascript">
-        document.title = "Đăng kí sử dụng dịch vụ";
         const form = document.querySelector("#register-form");
         const arrErr = Array.from(form.getElementsByClassName("error"));
         const btnReset = document.querySelector("#btn-reset");
@@ -85,4 +99,5 @@
         });
     </script>
 </body>
+
 </html>
