--- a/src/main/resources/templates/html/add/sudungmay.html
+++ b/src/main/resources/templates/html/add/sudungmay.html
@@ -4,9 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Đăng kí sử dụng máy</title>
+  <title th:text="#{title.createSuDungMay}"></title>
   <div th:replace="~{html/header}"></div>
-
 </head>
 
 <body>
@@ -17,47 +16,48 @@
       <main class="p-4">
         <div class="row border m-1 pb-2 rounded-top">
           <div class="bg-secondary p-2 text-light rounded-top">
-            <h1 class="border-bottom">Đăng kí sử dụng máy</h1>
+            <h1 class="border-bottom" th:text="#{title.createSuDungMay}"></h1>
           </div>
           <div class="col-8 ">
             <form th:action="@{/add/sudungmay}" th:object="${model}" method="post" id="register-form">
               <div class="form-group mb-3">
-                <label for="serial" class="form-label fw-bold">Mã khách hàng</label>
-                <input type="text" class="form-control" th:field="*{id.ma_khach_hang}" placeholder="Nhập mã khách hàng"
-                  id="serial" />
+                <label for="serial" class="form-label fw-bold" th:text="#{form.maKH}"></label>
+                <input type="text" class="form-control" th:field="*{id.ma_khach_hang}"
+                  th:placeholder="#{form.placeholder.maKH}" id="serial" />
                 <div th:errors="*{id.ma_khach_hang}" class="error-entity"></div>
                 <div class="error"></div>
               </div>
               <div class="form-group mb-3">
-                <label for="tenKh" class="form-label fw-bold">Mã máy</label>
-                <input type="text" class="form-control" th:field="*{id.ma_may}" placeholder="Nhập mã dịch vụ"
-                  id="tenKh" />
+                <label for="tenKh" class="form-label fw-bold" th:text="#{form.maMay}"></label>
+                <input type="text" class="form-control" th:field="*{id.ma_may}"
+                  th:placeholder="#{form.placeholder.maMay}" id="tenKh" />
                 <div th:errors="*{id.ma_may}" class="error-entity"></div>
                 <div class="error"></div>
               </div>
               <div class="form-group mb-3">
-                <label for="email" class="form-label fw-bold">Ngày bắt đầu sử dụng</label>
+                <label for="email" class="form-label fw-bold" th:text="#{form.dateUse}"></label>
                 <input type="date" class="form-control" th:field="*{id.ngayBatDauSuDung}"
-                  placeholder="Nhập ngày sử dụng" />
+                  th:placeholder="#{form.placeholder.dateUse}" />
                 <div th:errors="*{id.ngayBatDauSuDung}" class="error-entity"></div>
                 <div class="error"></div>
               </div>
               <div class="form-group mb-3">
-                <label for="phone" class="form-label fw-bold">Giờ bắt đầu sử dụng</label>
-                <input type="time" class="form-control" th:field="*{id.gioBatDau}" placeholder="Nhập giờ sử dụng" />
+                <label for="phone" class="form-label fw-bold" th:text="#{form.timeStart}"></label>
+                <input type="time" class="form-control" th:field="*{id.gioBatDau}"
+                  th:placeholder="#{form.placeholder.timeStart}" />
                 <div th:errors="*{id.gioBatDau}" class="error-entity"></div>
                 <div class="error"></div>
               </div>
               <div class="form-group mb-3">
-                <label for="diaChi" class="form-label fw-bold">Thời gian sử dụng</label>
+                <label for="diaChi" class="form-label fw-bold" th:text="#{form.timeUse}"></label>
                 <input type="text" class="form-control" th:field="*{thoiGianSuDung}"
-                  placeholder="Nhập thời gian sử dụng" id="diaChi" />
+                  th:placeholder="#{form.placeholder.timeUse}" id="diaChi" />
                 <div th:errors="*{thoiGianSuDung}" class="error-entity"></div>
                 <div class="error"></div>
               </div>
               <div>
-                <button id="btn-add" type="button" class="btn btn-outline-secondary">Submit button</button>
-                <button type="reset" class="btn btn-outline-secondary">Reset button</button>
+                <button id="btn-add" type="button" class="btn btn-outline-secondary" th:text="#{btn.submit}"></button>
+                <button type="reset" class="btn btn-outline-secondary" th:text="#{btn.reset}"></button>
               </div>
             </form>
           </div>
@@ -65,24 +65,28 @@
         </div>
       </main>
       <footer class="py-4 bg-light mt-auto">
-				<div class="container-fluid px-4">
-					<div
-						class="d-flex align-items-center justify-content-between small">
-						<div class="text-muted">Copyright &copy; Ducreal 2023</div>
-						<div>
-							<a href="#">Privacy Policy</a> &middot; <a href="#">Terms
-								&amp; Conditions</a>
-						</div>
-					</div>
-				</div>
-			</footer>
+        <div class="container-fluid px-4">
+          <div class="d-flex align-items-center justify-content-between small">
+            <div class="text-muted">Copyright &copy; Ducreal 2023</div>
+            <div>
+              <a href="#">Privacy Policy</a> &middot; <a href="#">Terms
+                &amp; Conditions</a>
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
   </div>
-
-  <script type="text/javascript">
-    document.title = "Đăng kí sử dụng máy";
+  <script th:inline="javascript">
+    let error = [
+      { index: 1, message: /*[[#{error.required}]]*/'', regex: /^KH\d{3}$/ },
+      { index: 2, message: /*[[#{error.required}]]*/'', regex: /^M\d{3}$/ },
+      { index: 3, message: /*[[#{error.required}]]*/'', regex: /^\d{4}-(0[1-9]|1[0-2])-(0[1-9]|[12][0-9]|3[01])$/ },
+      { index: 4, message: /*[[#{error.required}]]*/'', regex: /^\d/ },
+      { index: 5, message: /*[[#{error.required}]]*/'', regex: /^\d/ },
+      { index: 6, message: /*[[#{error.required}]]*/'', regex: /^\d/ },
+    ];
   </script>
-  <script th:src="@{/js/error/may.js}" type="text/javascript"></script>
   <script th:src="@{/js/add/errorHandle.js}" type="text/javascript">
   </script>
   <script th:src="|https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js|"></script>
