--- a/src/main/resources/templates/html/list/may.html
+++ b/src/main/resources/templates/html/list/may.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title th:text="${'Danh sách máy'}"></title>
+  <title th:text="#{title.listMay}"></title>
   <div th:replace="~{html/header}"></div>
 </head>
 
@@ -15,7 +15,7 @@
       <main class="p-4">
         <div class="row border m-1 pb-2 rounded-top">
           <div class="bg-secondary p-2 text-light rounded-top">
-            <h1 class="border-bottom" th:text="${'Danh sách máy'}"></h1>
+            <h1 class="border-bottom" th:text="#{title.listMay}"></h1>
           </div>
           <div class="col-12">
             <form id="form-submit2" action="" method="GET" class="d-flex justify-content-end mt-3 mb-3">
@@ -28,14 +28,13 @@
                     <span class="input-group-text" id="basic-addon1">
                       <i class="fa-solid fa-magnifying-glass"></i>
                     </span>
-                    <input type="text" id="search" name="search" class="form-control" placeholder="Search"
+                    <input type="text" id="search" name="search" class="form-control" th:placeholder="#{text.search}"
                       aria-label="Username" aria-describedby="basic-addon1" th:value="${search}" />
                   </div>
                 </div>
                 <div class="col-2 text-center">
-                  <button type="button" id="btn-search" class="btn btn-info text-light fw-bold">
-                    Search
-                  </button>
+                  <button type="button" id="btn-search" class="btn btn-info text-light fw-bold"
+                    th:text="#{text.search}"> </button>
                 </div>
               </div>
             </form>
@@ -66,23 +65,25 @@
                           </button>
                         </a>
                       </td>
-                      <div class="modal fade" th:id="'exampleModal' + ${em.maMay}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                      <div class="modal fade" th:id="'exampleModal' + ${em.maMay}" tabindex="-1"
+                        aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">Xóa dịch vụ</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body" th:text="'Xác nhận xóa dịch vụ có mã ' + ${em.maMay}"></div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                    <a th:href="@{/delete/may/{maMay}(maMay=${em.maMay})}" title="Xóa">
-                                        <button type="button" class="btn btn-danger">Xóa</button>
-                                    </a>
-                                </div>
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <h5 class="modal-title" id="exampleModalLabel">Xóa dịch vụ</h5>
+                              <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                aria-label="Close"></button>
                             </div>
+                            <div class="modal-body" th:text="'Xác nhận xóa dịch vụ có mã ' + ${em.maMay}"></div>
+                            <div class="modal-footer">
+                              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                              <a th:href="@{/delete/may/{maMay}(maMay=${em.maMay})}" title="Xóa">
+                                <button type="button" class="btn btn-danger">Xóa</button>
+                              </a>
+                            </div>
+                          </div>
                         </div>
-                    </div>
+                      </div>
                     </tr>
                   </th:block>
                 </tbody>
@@ -108,9 +109,8 @@
       </footer>
     </div>
   </div>
-  
+
   <script type="text/javascript" th:inline="javascript">
-    document.title = "Danh sách khách hàng";
     let currentPage = /*[(${currentPage})]*/ '';
     let total = /*[(${totalPages})]*/ '';
     let search = /*[[${search} ? ${search} : '']]*/ "";
