--- a/src/main/resources/templates/html/list/thongtinkhachhang.html
+++ b/src/main/resources/templates/html/list/thongtinkhachhang.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Thông tin sử dụng</title>
+  <title th:text="#{title.userUseServiceAndMachine}"></title>
   <div th:replace="~{html/header}"></div>
 </head>
 
@@ -15,7 +15,7 @@
       <main class="p-4">
         <div class="row border m-1 pb-2 rounded-top">
           <div class="bg-secondary p-2 text-light rounded-top">
-            <h1 class="border-bottom">Thông tin sử dụng</h1>
+            <h1 class="border-bottom" th:text="#{title.userUseServiceAndMachine}"></h1>
           </div>
           <div class="col-12">
             <form id="form-submit2" action="" method="GET" class="d-flex justify-content-end mt-3 mb-3">
@@ -26,12 +26,13 @@
                 <div class="col-6 d-flex align-items-center">
                   <div class="input-group">
                     <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-magnifying-glass"></i></span>
-                    <input type="text" id="search" name="search" class="form-control" placeholder="Search"
+                    <input type="text" id="search" name="search" class="form-control" th:placeholder="#{text.search}"
                       aria-label="Username" aria-describedby="basic-addon1" th:value="${search}">
                   </div>
                 </div>
                 <div class="col-2 text-center">
-                  <button type="button" id="btn-search" class="btn btn-info text-light fw-bold">Search</button>
+                  <button type="button" id="btn-search" class="btn btn-info text-light fw-bold"
+                    th:text="#{text.search}"></button>
                 </div>
               </div>
             </form>
@@ -39,19 +40,19 @@
               <table class="table table-striped">
                 <thead>
                   <tr>
-                    <th>Mã KH</th>
-                    <th>Tên KH</th>
-                    <th>Mã Máy</th>
-                    <th>Vị trí</th>
-                    <th>Trạng Thái</th>
-                    <th>Ngày BĐ SDM</th>
-                    <th>Giờ BĐ SDM</th>
-                    <th>TG dùng</th>
-                    <th>Mã DV</th>
-                    <th>Ngày SDDV</th>
-                    <th>Giờ SDDV</th>
-                    <th>Số lượng</th>
-                    <th>Tổng tiền</th>
+                    <th th:text="#{table.header.customerCode}"></th>
+                    <th th:text="#{table.header.customerName}"></th>
+                    <th th:text="#{table.header.machineCode}"></th>
+                    <th th:text="#{table.header.position}"></th>
+                    <th th:text="#{table.header.status}"></th>
+                    <th th:text="#{table.header.startDateMachineUsage}"></th>
+                    <th th:text="#{table.header.startTimeMachineUsage}"></th>
+                    <th th:text="#{table.header.usageTime}"></th>
+                    <th th:text="#{table.header.serviceCode}"></th>
+                    <th th:text="#{table.header.serviceDate}"></th>
+                    <th th:text="#{table.header.serviceTime}"></th>
+                    <th th:text="#{table.header.quantity}"></th>
+                    <th th:text="#{table.header.totalAmount}"></th>
                   </tr>
                 </thead>
                 <tbody id="list-item">
@@ -121,7 +122,6 @@
         }
       });
     });
-
     const formSm = document.querySelector("#form-submit2");
     const btnSearch = document.querySelector("#btn-search");
     btnSearch.addEventListener("click", (e) => {
