--- a/src/main/resources/templates/html/sidebar.html
+++ b/src/main/resources/templates/html/sidebar.html
@@ -1,51 +1,60 @@
 <div id="layoutSidenav_nav">
-    <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+    <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion" >
         <div class="sb-sidenav-menu">
             <div class="nav">
-                <a class="nav-link" th:href="@{/add/may}">
+                <a class="nav-link" th:href="@{/add/may}" >
                     <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-shuttle-space"></i>
-                    </div> Tạo mới máy
+                    </div>
+                    <span th:text="#{title.createmay}"></span>
                 </a>
                 <a class="nav-link" th:href="@{/add/khachhang}">
                     <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-user"></i>
-                    </div> Tạo mới khách hàng
+                    </div> 
+                    <span th:text="#{title.createkhachhang}"></span>
                 </a>
                 <a class="nav-link" th:href="@{/add/dichvu}">
                     <div class="sb-nav-link-icon">
                         <i class="fa-brands fa-servicestack"></i>
-                    </div> Tạo mới dịch vụ
+                    </div>
+                    <span th:text="#{title.createdichvu}"></span>
                 </a>
                 <a class="nav-link" th:href="@{/list/may?page=1&amp;limit=3}">
                     <div class="sb-nav-link-icon">
                         <i class="fas fa-table"></i>
-                    </div> Danh sách máy
+                    </div>
+                    <span th:text="#{title.listMay}"></span>
                 </a>
                 <a class="nav-link" th:href="@{/list/khachhang?page=1&amp;limit=3}">
                     <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-users"></i>
-                    </div> Danh sách khách hàng
+                    </div>
+                    <span th:text="#{title.listKhachHang}"></span>
                 </a>
                 <a class="nav-link" th:href="@{/list/dichvu?page=1&amp;limit=3}">
                     <div class="sb-nav-link-icon">
                         <i class="fas fa-table"></i>
-                    </div> Danh sách dịch vụ
+                    </div>
+                    <span th:text="#{title.listDichVu}"></span>
                 </a>
                 <a class="nav-link" th:href="@{/add/sudungmay}">
                     <div class="sb-nav-link-icon">
                         <i class="fas fa-table"></i>
-                    </div> Đăng ký sử dụng máy
+                    </div>
+                    <span th:text="#{title.createSuDungMay}"></span>
                 </a>
                 <a class="nav-link" th:href="@{/add/sudungdichvu}">
                     <div class="sb-nav-link-icon">
                         <i class="fas fa-table"></i>
-                    </div> Đăng kí dùng dịch vụ
+                    </div>
+                    <span th:text="#{title.createSuDungDichVu}"></span>
                 </a>
                 <a class="nav-link" th:href="@{/list/thongtinkhachhang?page=1&amp;limit=3}">
                     <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-circle-info"></i>
-                    </div> Thông tin sử dụng
+                    </div>
+                    <span th:text="#{title.userUseServiceAndMachine}"></span>
                 </a>
             </div>
         </div>
